kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eks-sport-app
  labels:
    apps: sport-app
