kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: metrics-service
  name: metrics-service
  namespace: eks-sport-app
spec:
  type: NodePort
  selector:
    app: metrics-service
  ports:
    - protocol: TCP
      port: 80
      nodePort: 30000
      targetPort: 3000
