kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metrics-ingress
  namespace: eks-sport-app
  labels:
    app: metrics-ingress
  annotations:
    alb.ingress.kubernetes.io/target-type: instance
    kubernetes.io/ingress.class: alb

spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: metrics-service
                port:
                  number: 80
